feat: added loggins config

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,12 @@
 {
+  "AppName": "sectors-srv-manifest",
+  "Env":  "Development",
   "Logging": {
+    "SinksConfig": {
+      "FileSink": false,
+      "ConsoleSink": true,
+      "GrafanaSinkUrl": "http://107.174.192.188:10001"
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
@@ -7,10 +14,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "connectionString": "Server=107.175.142.167;Database=Sectors;User Id=payca;Password=Payca123@;Encrypt=False;TrustServerCertificate=True"
-    //"connectionString": "Server=13.178.64.100;Database=SectorsCore;User Id=payca;Password=Payca.2021$$;Encrypt=False;TrustServerCertificate=True"
-    //"connectionString": "User ID=usrexp;Initial Catalog=SectorsCore;Data Source=13.178.64.103; Password=Chp.2021$$;Encrypt=False;TrustServerCertificate=True"
-  },
+    "connectionString": "Server=107.175.142.167;Database=Sectors;User Id=payca;Password=Payca123@;Encrypt=False;TrustServerCertificate=True"  },
   "Jwt": {
     "Issuer": "https://payca-sectors.com",
     "Audience": "https://payca-sectors.com",
