fix: logging and nuget config

--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="PaycaNuget" value="http://107.174.192.188:10002" />
+    <add key="nuget.payca.cl" value="http://107.174.192.188:10002/v3/index.json" protocolVersion="3" />
   </packageSources>
 </configuration>
