--- a/sectors-srv-manifest.csproj
+++ b/sectors-srv-manifest.csproj
@@ -20,4 +20,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="RouteModule\Controllers\" />
+    <Folder Include="RouteModule\Services\" />
+    <Folder Include="TrackingModule\" />
+  </ItemGroup>
+
 </Project>
